syntax = "proto3";

import "aelf/options.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Benchmark.PerformanceTestContract";

service PerformanceTestContract {
    option (aelf.csharp_state) = "AElf.Benchmark.PerformanceTestContract.PerformanceTestContractState";
    //Actions
    rpc Fibonacci (google.protobuf.UInt64Value) returns (google.protobuf.UInt64Value) {
    }

    rpc LoopExpNop(PerformanceTesteInput)returns (google.protobuf.Int32Value) {
    }
    
    rpc LoopDivAdd(DivAddTestInput) returns (google.protobuf.){
        
    }
}

message PerformanceTesteInput {
    int32 exponent = 1;
    int32 seed = 2;
    uint32 n = 3;
}

message DivAddTestInput{
    uint32 x =1;
    uint32 y =2;
    uint32 k = 3;
    uint32 n = 4;
}
